crates/unleash-api-client-macros/tests/ui/fail/duplicated_attrs.stderr
error: duplicate #[feature_name(...)] attribute
  --> tests/ui/fail/duplicated_attrs.rs:10:5
   |
10 |     #[feature_name("b")]
   |     ^
